# Deasign-Pattern-Code-Implements

./: .gitignore  CMakeLists.txt  Duck.cpp  FlyBehavior.cpp  FlyBehavior.h  QuackBehavior.cpp  QuackBehavior.h  README.md  main  main.cpp
Ch.1/: Duck.h
Ch.1 Strategy Pattern/: FlyBehavior.h
Ch.1_Strategy_Pattern/: Duck.cpp  Duck.h  QuackBehavior.h  main.cpp
Ch.2 Observer Pattern/: CMakeLists.txt  DataObject.h  DisplayElement.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h  main  main.cpp
Ch.2_Observer_Pattern/: CMakeLists.txt  DataObject.cpp  DataObject.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h  main  main.cpp
Ch.3_Decorator_Pattern/: Beverage.cpp  Beverage.h  CMakeLists.txt  Condiments.cpp  Condiments.h  main.cpp
Ch.4_Factory_Pattern/: CMakeLists.txt  ChicagoPizzaIngredientFactory.cpp  ChicagoPizzaIngredientFactory.h  ChicagoStylePizza.cpp  ChicagoStylePizza.h  ChicagoStylePizzaStore.cpp  ChicagoStylePizzaStore.h  Ingredient.cpp  Ingredient.h  NYPizzaIngredientFactory.cpp  NYPizzaIngredientFactory.h  NYStylePizza.cpp  NYStylePizza.h  NYStylePizzaStore.cpp  NYStylePizzaStore.h  Pizza.cpp  Pizza.h  PizzaIngredientFactory.cpp  PizzaIngredientFactory.h  PizzaStore.cpp  PizzaStore.h  main.cpp
Ch.5_Singleton_Pattern/: CMakeLists.txt  ChocolateBoiler.cpp  ChocolateBoiler.h  main.cpp  (+2 more)
Ch.7_Adapter_and_Facade_Pattern/: CMakeLists.txt  Duck.cpp  Duck.h  Enumeration.hpp  EnumerationIterator.hpp  HomeTheaterFacade.cpp  HomeTheaterFacade.h  Iterator.hpp  TheaterDevice.cpp  TheaterDevice.h  Turkey.cpp  Turkey.h  TurkeyAdapter.cpp  TurkeyAdapter.h  main.cpp
(+8 files in other folders)
